Added billing api scaffold
