# libs/data-access/apis/billing-api/src/lib/api/billings.serviceInterface.ts
@@ -1,0 +1,49 @@
+/**
+ *  Billing Api 
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { BillingDtoBillingModel } from '../model/models';
+import { ProblemDetailsBillingModel } from '../model/models';
+
+
+import { BillingConfiguration }                                     from '../configuration';
+
+
+export interface ApiBillingsGetRequestParams {
+    name?: string;
+    observations?: string;
+    queryValue?: string;
+    workName?: string;
+    receptionDateFrom?: string;
+    receptionDateTo?: string;
+    amountFrom?: number;
+    amountTo?: number;
+    page?: number;
+    pageSize?: number;
+    order?: string;
+    ids?: Array<string>;
+}
+
+
+export interface BillingsBillingServiceInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: BillingConfiguration;
+
+    /**
+     * 
+     * 
+     * @endpoint get /api/billings
+* @param requestParameters
+     */
+    apiBillingsGet(requestParameters: ApiBillingsGetRequestParams, extraHttpRequestParams?: any): Observable<Array<BillingDtoBillingModel>>;
+
+}
