# libs/data-access/apis/billing-api/src/lib/model/billingDto.ts
@@ -1,0 +1,20 @@
+/**
+ *  Billing Api 
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface BillingDtoBillingModel { 
+    id?: number;
+    name?: string | null;
+    observations?: string | null;
+    receptionDate?: string;
+    amount?: number;
+    workName?: string | null;
+}
+
